Implement tests estructure with two tests, one for the server and other for the customer controler

--- a/development_environmet/Makefile
+++ b/development_environmet/Makefile
@@ -33,3 +33,7 @@ db-upgrade:
 db-downgrade:
 	docker exec -t $(backend) pipenv run flask db downgrade
 
+# Run the tests
+backend-tests:
+	docker exec -t $(backend) pipenv run python tests/tests.py
+
