Fix conflic in Pipfile

--- a/app/Pipfile
+++ b/app/Pipfile
@@ -16,6 +16,9 @@ mysqlclient = "*"
 python-dotenv = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
+ptvsd = "*"
+google = "*"
+google-cloud-storage = "*"
 
 [requires]
 python_version = "3.7"
