--- a/development_environmet/docker-compose.debug.yaml
+++ b/development_environmet/docker-compose.debug.yaml
@@ -12,7 +12,7 @@ services:
       - ../app:/app
     networks:
       - crm
-    command: pipenv run python -m ptvsd --host 0.0.0.0 --port 5678 --wait -m flask run --host 0.0.0.0 --no-reload --with-threads
+    command: pipenv run python -m ptvsd --host 0.0.0.0 --port 5678 --wait -m flask run --host 0.0.0.0 --no-reload --with-threads --cert=adhoc
 
     
 networks:
