--- a/development_environmet/docker-compose.debug.yaml
+++ b/development_environmet/docker-compose.debug.yaml
@@ -3,6 +3,7 @@ services:
   debug-backend:
     build:
       context: ../app/
+      dockerfile: ../development_environmet/Dockerfile
       args:
         username: "nonroot"
     ports:
