--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Where am I
       run: echo $PWD
+    - name: CATTT
+      run: cat /home/runner/work/crm/crm/app/../development_environment/Dockerfile
+    - name: tree
+      run: tree .
+      working-directory: /home/runner/work/crm/crm
     - name: Build the docker-compose stack
       run: docker-compose up -d
       working-directory: ./development_environment
