--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Where am I
-      run: echo $PWD
-    - name: CATTT
-      run: cat /home/runner/work/crm/crm/app/../development_environment/Dockerfile
     - name: Build the docker-compose stack
-      run: docker-compose up -d
+      run: docker-compose -f docker-compose-cicd.yaml up -d
       working-directory: ./development_environment
     - name: Runnint the tests...
-      run: docker exec -i ${docker-compose ps -q backend} pipenv run python tests.py
+      run: docker exec -i ${docker-compose -f docker-compose-cide.yaml ps -q backend} pipenv run python tests.py
       working-directory: ./development_environment
     - name: Run a multi-line script
       run: |
