--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
     - name: Build the docker-compose stack
       run: docker-compose -f docker-compose-cicd.yaml up -d
       working-directory: ./development_environment
+    - name: Docker info
+      run: docker info
     - name: Runnint the tests...
       run: docker exec -i "$(docker-compose -f docker-compose-cicd.yaml ps -q backend)" pipenv run python tests.py
       working-directory: ./development_environment
