--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
       working-directory: ./development_environment
     - name: Docker info
       run: docker info
+    - name: Docker ps
+      run: docker ps
     - name: Runnint the tests...
       run: docker exec -i "$(docker-compose -f docker-compose-cicd.yaml ps -q backend)" pipenv run python tests.py
       working-directory: ./development_environment
