--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,14 +36,14 @@ jobs:
       working-directory: ./app
     - name: Change variables
       run: |
-        sh """sed -i "s*YOUR_DATABASE_URI*${env.DATABASE_URI}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_GOOGLE_CLIENT_ID*${env.GOOGLE_CLIENT_ID}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_GOOGLE_CLIENT_SECRET*${env.GOOGLE_CLIENT_SECRET}*g" /home/runner/work/crm/crm/app/.env"""
+        sh """sed -i "s*YOUR_DATABASE_URI*${DATABASE_URI}*g" /home/runner/work/crm/crm/app/.env"""
+        sh """sed -i "s*YOUR_GOOGLE_CLIENT_ID*${GOOGLE_CLIENT_ID}*g" /home/runner/work/crm/crm/app/.env"""
+        sh """sed -i "s*YOUR_GOOGLE_CLIENT_SECRET*${GOOGLE_CLIENT_SECRET}*g" /home/runner/work/crm/crm/app/.env"""
         sh """sed -i "s*YOUR_GOOGLE_APPLICATION_CREDENTIALS*.credentials/crm-service-storage-key.json*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_GOOGLE_PROJECT*${env.GOOGLE_PROJECT}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_GOOGLE_BUCKET*${env.GOOGLE_BUCKET}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_FACEBOOK_CLIENT_ID*${env.FACEBOOK_CLIENT_ID}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_FACEBOOK_CLIENT_SECRET*${env.FACEBOOK_CLIENT_SECRET}*g" /home/runner/work/crm/crm/app/.env"""
+        sh """sed -i "s*YOUR_GOOGLE_PROJECT*${GOOGLE_PROJECT}*g" /home/runner/work/crm/crm/app/.env"""
+        sh """sed -i "s*YOUR_GOOGLE_BUCKET*${GOOGLE_BUCKET}*g" /home/runner/work/crm/crm/app/.env"""
+        sh """sed -i "s*YOUR_FACEBOOK_CLIENT_ID*${FACEBOOK_CLIENT_ID}*g" /home/runner/work/crm/crm/app/.env"""
+        sh """sed -i "s*YOUR_FACEBOOK_CLIENT_SECRET*${FACEBOOK_CLIENT_SECRET}*g" /home/runner/work/crm/crm/app/.env"""
     - name: Build the docker-compose stack
       run: docker-compose -f docker-compose-cicd.yaml up -d
       working-directory: ./development_environment
