--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,24 @@ jobs:
       run: cp env .env
       working-directory: ./app
     - name: Change variables
+      env:
+        FLASK_APP: main
+        FLASK_ENV: development
+        CONFIG_MODE: 'config.Test'
+        PYTHONUNBUFFERED: 1
+        GOOGLE_BUCKET_PREFIX: https://storage.googleapis.com/
+        GOOGLE_DISCOVERY_URL: https://accounts.google.com/.well-known/openid-configuration
+        FACEBOOK_AUTHORIZE_URL: https://graph.facebook.com/oauth/authorize
+        FACEBOOK_ACCESS_TOKEN_URL: https://graph.facebook.com/oauth/access_token
+        FACEBOOK_USER_INFO_URL: https://graph.facebook.com/me?fields=email
+        GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID}}
+        GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET}}
+        FACEBOOK_CLIENT_ID: ${{ secrets.FACEBOOK_CLIENT_ID}}
+        FACEBOOK_CLIENT_SECRET:  ${{ secrets.FACEBOOK_CLIENT_SECRET}}
+        GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT}}
+        GOOGLE_BUCKET: ${{ secrets.GOOGLE_BUCKET}}
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+        DATABASE_URI: ${{ secrets.DATABASE_URI}}
       run: |
         sh """sed -i "s*YOUR_DATABASE_URI*${{ secrets.DATABASE_URI}}*g" /home/runner/work/crm/crm/app/.env"""
         sh """sed -i "s*YOUR_GOOGLE_CLIENT_ID*${GOOGLE_CLIENT_ID}*g" /home/runner/work/crm/crm/app/.env"""
