--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: get variables
       run: |
-        echo ${{env.GOOGLE_BUCKET}}
+        echo ${{secrets.GOOGLE_BUCKET}}
         
     - name: create .env
       run: cp env .env
