--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,11 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: get variables
-      env: 
-        A: 'aaaaaaa'
-      run: echo "AAAA ${A}"
+      with: # Set the secret as an input
+        super_secret: ${{ secrets.GOOGLE_BUCKET }}
+      env: # Or as an environment variable
+        super_secret: ${{ secrets.GOOGLE_BUCKET }}
+      run: echo "AAAA ${super_secretA}"
         
     - name: create .env
       run: cp env .env
