--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         super_secret: ${{ secrets.GOOGLE_BUCKET }}
       env: # Or as an environment variable
         super_secret: ${{ secrets.GOOGLE_BUCKET }}
-      run: echo "AAAA ${super_secretA}"
+      run: echo "AAAA ${super_secret}"
         
     - name: create .env
       run: cp env .env
