--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,14 +62,15 @@ jobs:
         GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS}}
         DATABASE_URI: ${{ secrets.DATABASE_URI}}
       run: |
-        sh """sed -i "s*YOUR_DATABASE_URI*${{ secrets.DATABASE_URI}}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_GOOGLE_CLIENT_ID*${GOOGLE_CLIENT_ID}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_GOOGLE_CLIENT_SECRET*${GOOGLE_CLIENT_SECRET}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_GOOGLE_APPLICATION_CREDENTIALS*.credentials/crm-service-storage-key.json*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_GOOGLE_PROJECT*${GOOGLE_PROJECT}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_GOOGLE_BUCKET*${GOOGLE_BUCKET}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_FACEBOOK_CLIENT_ID*${FACEBOOK_CLIENT_ID}*g" /home/runner/work/crm/crm/app/.env"""
-        sh """sed -i "s*YOUR_FACEBOOK_CLIENT_SECRET*${FACEBOOK_CLIENT_SECRET}*g" /home/runner/work/crm/crm/app/.env"""
+        sh """sed -i "s*YOUR_DATABASE_URI*${{ secrets.DATABASE_URI}}*g" .env"""
+        sh """sed -i "s*YOUR_GOOGLE_CLIENT_ID*${GOOGLE_CLIENT_ID}*g" .env"""
+        sh """sed -i "s*YOUR_GOOGLE_CLIENT_SECRET*${GOOGLE_CLIENT_SECRET}*g" .env"""
+        sh """sed -i "s*YOUR_GOOGLE_APPLICATION_CREDENTIALS*.credentials/crm-service-storage-key.json*g" .env"""
+        sh """sed -i "s*YOUR_GOOGLE_PROJECT*${GOOGLE_PROJECT}*g" .env"""
+        sh """sed -i "s*YOUR_GOOGLE_BUCKET*${GOOGLE_BUCKET}*g" .env"""
+        sh """sed -i "s*YOUR_FACEBOOK_CLIENT_ID*${FACEBOOK_CLIENT_ID}*g" .env"""
+        sh """sed -i "s*YOUR_FACEBOOK_CLIENT_SECRET*${FACEBOOK_CLIENT_SECRET}*g" .env"""
+      working-directory: ./app
     - name: Build the docker-compose stack
       run: docker-compose -f docker-compose-cicd.yaml up -d
       working-directory: ./development_environment
