--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,12 @@ jobs:
         super_secret: yeeeeey
         # super_secret: ${{ secrets.GOOGLE_BUCKET }}
     
+    - name: replace
+      with:
+        pattern: 'Hello, (\w+)!'
+        string: 'Hello, world!'
+        replace-with: 'I greet you, $1!'
+    
     # - uses: actions/checkout@v1    
     - name: create .env
       # run: cp env .env
