--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,16 @@ jobs:
     - name: create .env
       run: ls
       working-directory: ./app
+    - name: Print file 1
+      run: |
+        cat app.yaml
     - name: Change variables
       run: |
         sh ../deployment_automation/replace_variables.sh app.yaml
+      working-directory: ./app
+    - name: Print file 2
+      run: |
+        cat app.yaml
       working-directory: ./app
     - name: Build the docker-compose stack
       run: docker-compose -f docker-compose-cicd.yaml up -d
