--- a/app/app.yaml
+++ b/app/app.yaml
@@ -9,13 +9,13 @@ env_variables:
   DATABASE_URI: YOUR_DATABASE_URI
   GOOGLE_CLIENT_ID: YOUR_GOOGLE_CLIENT_ID
   GOOGLE_CLIENT_SECRET: YOUR_GOOGLE_CLIENT_SECRET
-  GOOGLE_APPLICATION_CREDENTIALS: YOUR_GOOGLE_APPLICATION_CREDENTIALS
   GOOGLE_PROJECT: YOUR_GOOGLE_PROJECT
   GOOGLE_BUCKET: YOUR_GOOGLE_BUCKET
-  GOOGLE_DISCOVERY_URL: YOUR_GOOGLE_DISCOVERY_URL
   FACEBOOK_CLIENT_ID: YOUR_FACEBOOK_CLIENT_ID
   FACEBOOK_CLIENT_SECRET: YOUR_FACEBOOK_CLIENT_SECRET
-  FACEBOOK_AUTHORIZE_URL: YOUR_FACEBOOK_AUTHORIZE_URL
-  FACEBOOK_ACCESS_TOKEN_URL: YOUR_FACEBOOK_ACCESS_TOKEN_URL
-  FACEBOOK_USER_INFO_URL: YOUR_FACEBOOK_USER_INFO_URL
+  GOOGLE_APPLICATION_CREDENTIALS: .credentials/crm-service-storage-key.json
+  GOOGLE_DISCOVERY_URL: https://accounts.google.com/.well-known/openid-configuration
+  FACEBOOK_ACCESS_TOKEN_URL: https://graph.facebook.com/oauth/access_token
+  FACEBOOK_AUTHORIZE_URL: https://graph.facebook.com/oauth/authorize
+  FACEBOOK_USER_INFO_URL: https://graph.facebook.com/me?fields=email
   CONFIG_MODE: 'config.Prod'
