--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
     steps:
     - name: Retreiving the repo
-    - uses: actions/checkout@v1
+      uses: actions/checkout@v1
     # - name: Setting up GCloud Auth
     #     uses: actions/gcloud/auth@master
     #     env:
