--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pipenv
-        pipenv install 
+        pipenv install
+      working-directory: ./app
 
     # - name: Setting up GCloud Auth
     #     uses: actions/gcloud/auth@master
