--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.7'
-    # You can test your matrix by printing the current Python version
+    - name: Install system dependencies
+      run: |
+        apt-get install libmysqlclient-dev
+        apt-get install python-dev
     - name: create .env file
       run: cp env .env
       working-directory: ./app
