--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
       GOOGLE_BUCKET: ${{ secrets.GOOGLE_BUCKET}}
       GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS}}
       DATABASE_URI: ${{ secrets.DATABASE_URI}}
+      DATABASE_TEST_URI: mysql://root:password@127.0.0.1:3307/test_db
 
     steps:
     - name: Retreiving the repo
@@ -65,23 +66,14 @@ jobs:
         pipenv install
       working-directory: ./app
 
-    # - name: Setting up GCloud Auth
-    #     uses: actions/gcloud/auth@master
-    #     env:
-    #       GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
+    - name: Setting up GCloud Auth
+        uses: actions/gcloud/auth@master
+        env:
+          GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
+
     - name: Run the tests
       run: pipenv run python tests/tests.py
       working-directory: ./app
-    # - name: Build the docker-compose stack
-    #   run: docker-compose -f docker-compose-cicd.yaml up -d
-    #   working-directory: ./development_environment
-    # - name: Docker info
-    #   run: docker info
-    # - name: Docker ps
-    #   run: docker ps
-    # - name: Runnint the tests...
-    #   run: docker exec -i "$(docker-compose -f docker-compose-cicd.yaml ps -q backend)" pipenv run python tests/tests.py
-    #   working-directory: ./development_environment
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
@@ -90,14 +82,14 @@ jobs:
       run: |
         sh ../deployment_automation/replace_variables.sh app.yaml
       working-directory: ./app
-    # - name: Run deployment
-    #     if: success()
-    #     uses: actions/gcloud/cli@master
-    #     env:
-    #       CLOUDSDK_CORE_PROJECT: YOUR_GCP_PROJECT_NAME
-    #     with:
-    #       entrypoint: gcloud
-    #       args: app deploy ./app.yaml --quiet
+    - name: Run deployment
+        if: success()
+        uses: actions/gcloud/cli@master
+        env:
+          CLOUDSDK_CORE_PROJECT: YOUR_GCP_PROJECT_NAME
+        with:
+          entrypoint: gcloud
+          args: app deploy ./app.yaml --quiet
 
 
 
