--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,10 +78,11 @@ jobs:
       run: |
         sh ../deployment_automation/replace_variables.sh app.yaml
       working-directory: ./app
+    - name: Print pwd
+      run: echo $PWD
     - name: Run deployment
       # if: success()
       uses: actions/gcloud/cli@master
-      working-directory: ./app
       env:
         CLOUDSDK_CORE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
       with:
