--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    services:
-      db_test:
-        image: mysql:5.7
-        env:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: 'test_db'
-          MYSQL_USER: 'user'
-          MYSQL_PASSWORD: 'password'
-        ports:
-        - '3307:3306'
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    # services:
+    #   db_test:
+    #     image: mysql:5.7
+    #     env:
+    #       MYSQL_ROOT_PASSWORD: password
+    #       MYSQL_DATABASE: 'test_db'
+    #       MYSQL_USER: 'user'
+    #       MYSQL_PASSWORD: 'password'
+    #     ports:
+    #     - '3307:3306'
+    #     options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     env:
       FLASK_APP: main
       FLASK_ENV: development
