--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,12 @@ jobs:
       DATABASE_TEST_URI: 'mysql://root:password@127.0.0.1:3307/test_db'
 
     steps:
+    - name: LS
+      run: ls
+    - name: LS in /home/runner/work/crm/crm
+      run: ls /home/runner/work/crm/crm
+    - name: LS in /home/runner/work/crm/crm/app
+      run: ls /home/runner/work/crm/crm/app
     - name: Retreiving the repo
       uses: actions/checkout@v1
     # - name: Set up Python 
