--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    # services:
-    #   db_test:
-    #     image: mysql:5.7
-    #     env:
-    #       MYSQL_ROOT_PASSWORD: password
-    #       MYSQL_DATABASE: 'test_db'
-    #       MYSQL_USER: 'user'
-    #       MYSQL_PASSWORD: 'password'
-    #     ports:
-    #     - '3307:3306'
-    #     options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    services:
+      db_test:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: 'test_db'
+          MYSQL_USER: 'user'
+          MYSQL_PASSWORD: 'password'
+        ports:
+        - '3307:3306'
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     env:
       FLASK_APP: main
       FLASK_ENV: development
@@ -44,44 +44,49 @@ jobs:
     steps:
     - name: Retreiving the repo
       uses: actions/checkout@v1
-    # - name: Set up Python 
-    #   uses: actions/setup-python@v1
-    #   with:
-    #     python-version: '3.7'
-    # - name: Install system dependencies
-    #   run: |
-    #     sudo apt-get install libmysqlclient-dev
-    #     sudo apt-get install python-dev
-    # - name: create .env file
-    #   run: cp env .env
-    #   working-directory: ./app
-    # - name: Change variables in .env
-    #   run: |
-    #     sh ../deployment_automation/replace_variables.sh .env
-    #   working-directory: ./app
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install pipenv
-    #     pipenv install
-    #   working-directory: ./app
+
+    - name: Set up Python 
+      uses: actions/setup-python@v1
+      with:
+        python-version: '3.7'
+
+    - name: Install system dependencies
+      run: |
+        sudo apt-get install libmysqlclient-dev
+        sudo apt-get install python-dev
+
+    - name: create .env file
+      run: cp env .env
+      working-directory: ./app
+
+    - name: Change variables in .env
+      run: |
+        sh ../deployment_automation/replace_variables.sh .env
+      working-directory: ./app
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pipenv
+        pipenv install
+      working-directory: ./app
 
     - name: Setting up GCloud Auth
       uses: actions/gcloud/auth@master
       env:
         GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
 
-    # - name: Run the tests
-    #   run: pipenv run python tests/tests.py
-    #   working-directory: ./app
+    - name: Run the tests
+      run: pipenv run python tests/tests.py
+      working-directory: ./app
+
     - name: Change variables in app.yaml
       run: |
         sh ../deployment_automation/replace_variables.sh app.yaml
       working-directory: ./app
-    - name: Print pwd
-      run: echo $PWD
+      
     - name: Run deployment
-      # if: success()
+      if: success()
       uses: actions/gcloud/cli@master
       env:
         CLOUDSDK_CORE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
